2-basics-pratcice/namespaces/network-policy/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
spec:
  podSelector: {} 
  policyTypes:
  - Egress
  - Ingress
  ingress: []
  egress: []
